# NyxLib

./: CMakeLists.txt  Makefile  main  main.c
src/core/: nlcore.c  nlcore.h  nlerror.h  nlwindow.c  nlwindow.h
